<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.chingchan.theClap.ui.home.HomeFragment"
        android:label="@string/botm_navi_01"
        tools:layout="@layout/frag_home" />

    <fragment
        android:id="@+id/navigation_compliment"
        android:name="com.chingchan.theClap.ui.compliment.ComplimentFragment"
        android:label="@string/botm_navi_02"
        tools:layout="@layout/frag_comp" />

    <fragment
        android:id="@+id/navigation_notification"
        android:name="com.chingchan.theClap.ui.notification.NotificationFragment"
        android:label="@string/botm_navi_03"
        tools:layout="@layout/frag_noti" />

    <fragment
        android:id="@+id/navigation_chatting"
        android:name="com.chingchan.theClap.ui.chatting.ChattingFragment"
        android:label="@string/botm_navi_04"
        tools:layout="@layout/frag_noti" />

    <fragment
        android:id="@+id/navigation_my_page"
        android:name="com.chingchan.theClap.ui.myPage.MyPageFragment"
        android:label="@string/botm_navi_05"
        tools:layout="@layout/frag_noti" />

</navigation>